log/build_2024-04-23_00-32-33/castelet/stdout_stderr.log
running egg_info
writing ../../build/castelet/castelet.egg-info/PKG-INFO
writing dependency_links to ../../build/castelet/castelet.egg-info/dependency_links.txt
writing entry points to ../../build/castelet/castelet.egg-info/entry_points.txt
writing requirements to ../../build/castelet/castelet.egg-info/requires.txt
writing top-level names to ../../build/castelet/castelet.egg-info/top_level.txt
reading manifest file '../../build/castelet/castelet.egg-info/SOURCES.txt'
writing manifest file '../../build/castelet/castelet.egg-info/SOURCES.txt'
running build
running build_py
copying castelet/castelet.py -> /home/field/MANOS/build/castelet/build/lib/castelet
running install
running install_lib
copying /home/field/MANOS/build/castelet/build/lib/castelet/castelet.py -> /home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet
byte-compiling /home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet/castelet.py to castelet.cpython-38.pyc
  File "/home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 116
    self.castelet_ui.test.clicked.connect(self.calibrate) 5
                                                          ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/castelet/castelet.egg-info to /home/field/MANOS/install/castelet/lib/python3.8/site-packages/castelet-0.0.0-py3.8.egg-info
running install_scripts
Installing castelet script to /home/field/MANOS/install/castelet/lib/castelet
writing list of installed files to '/home/field/MANOS/build/castelet/install.log'
